<resources>
    <string name="app_name">AndroidFileSYNC</string>
    <string name="menu_option_label">設定</string>
    <string name="send_file_button_label">ファイル送信</string>
    <string name="backup_button_label">バックアップ</string>
    <string name="port_view_label">ポート番号</string>
    <string name="port_edit_label">サーバーと同一のものを設定</string>
    <string name="password_view_label">パスワード</string>
    <string name="password_edit_label">サーバーと同一のものを設定</string>
    <string name="auto_backup_check_label">自動バックアップ</string>
    <string name="backup_view_label">バックアップ対象フォルダ</string>
    <string name="add_backup_button_label">追加</string>
    <string name="delete_backup_button_label">除外</string>
    <string name="ok_button_label">OK</string>
    <string name="cancel_button_label">キャンセル</string>
    <string name="invalid_password_label">パスワードを入力してください</string>
    <string name="empty_backup_paths_label">バックアップ対象を設定してください</string>
</resources>