<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">


    <TextView
        android:id="@+id/port_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/port_edit"
        app:layout_constraintTop_toTopOf="@+id/port_edit"
        app:layout_constraintBottom_toBottomOf="@+id/port_edit"
        android:text="@string/port_view_label"
    />
    <EditText
        android:id="@+id/port_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="number"
        android:hint="@string/port_edit_label"
        android:autofillHints=""
        android:textSize="16sp"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/port_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
        android:id="@+id/password_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/password_edit"
        app:layout_constraintTop_toTopOf="@+id/password_edit"
        app:layout_constraintBottom_toBottomOf="@+id/password_edit"
        android:text="@string/password_view_label"
    />
    <EditText
        android:id="@+id/password_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="textPassword"
        android:hint="@string/password_edit_label"
        android:autofillHints=""
        android:textSize="16sp"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/password_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/port_edit"
    />

    <CheckBox
        android:id="@+id/auto_backup_check"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/password_view"
        android:text="@string/auto_backup_check_label"
    />

    <TextView
        android:id="@+id/backup_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/auto_backup_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        android:text="@string/backup_view_label"
    />

    <ListView
        android:id="@+id/backup_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#DDDDDD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backup_view"
        app:layout_constraintBottom_toTopOf="@+id/add_backup_button"
    />

    <Button
        android:id="@+id/add_backup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginEnd="16dp"
        android:onClick="onClickAddBackup"
        android:text="@string/add_backup_button_label"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ok_button"
    />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="onClickOK"
        android:text="@string/ok_button_label"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
    />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="onClickCancel"
        android:text="@string/cancel_button_label"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/ok_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>